fix the hero gap

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -90,7 +90,7 @@ html {
 
 .custom-shape-divider-bottom-1719732010 {
   position: absolute;
-  bottom: 0;
+  bottom: -1px;
   left: 0;
   width: 100%;
   overflow: hidden;
